// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemChooserScreen #setupItemSections for chooser renders current selection if intialItems is defined (no headers) 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": true,
        "id": 2,
      },
      Object {
        "chosen": true,
        "id": 3,
      },
    ],
    "label": undefined,
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for chooser renders current selection with header if initialItems and addedItems are defined  1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
    ],
    "label": "Current Selection",
  },
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 2,
      },
      Object {
        "chosen": true,
        "id": 3,
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for chooser renders sections 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
    "label": "Current Selection",
  },
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 5,
      },
    ],
    "label": "Added",
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for chooser renders suggested items when search term supplied 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for chooser renders suggested items when search term supplied 2`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": true,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for picker renders default suggested items 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "chosen": false,
        "id": 1,
      },
      Object {
        "chosen": false,
        "id": 2,
      },
      Object {
        "chosen": false,
        "id": 3,
      },
    ],
    "label": "Recent Items",
  },
]
`;

exports[`ItemChooserScreen #setupItemSections for picker renders sections 1`] = `Array []`;

exports[`ItemChooserScreen #setupItemSections for picker renders suggested items when search term supplied 1`] = `
Array [
  Object {
    "data": Array [
      Object {
        "id": 2,
      },
      Object {
        "id": 3,
      },
    ],
  },
]
`;

exports[`ItemChooserScreen full renders as expected 1`] = `
<RCTSafeAreaView>
  <View>
    <View>
      <Icon
        color={undefined}
        name="Search"
      />
      <TextInput
        autoCapitalize="none"
        autoCorrect={false}
        autoFocus={true}
        editable={true}
        onChangeText={[Function]}
        onFocus={[MockFunction]}
        placeholder="Begin type to searching"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    ListFooterComponent={<View />}
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    invertStickyHeaders={undefined}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View />
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`ItemChooserScreen shallow renders as expected 1`] = `
<SafeAreaView>
  <ItemChooserListHeader
    ItemRowComponent={[Function]}
    autoFocus={true}
    clearSearchTerm={[Function]}
    fetchSearchSuggestions={[Function]}
    getSearchSuggestions={[Function]}
    headerText={undefined}
    initialItems={Array []}
    onFocus={[MockFunction]}
    searchPlaceholder="Begin type to searching"
    searchTerm={undefined}
    setSearchTerm={[Function]}
    suggestedItems={Array []}
  />
  <SectionList
    ListFooterComponent={<View />}
    data={Array []}
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    keyboardShouldPersistTaps="handled"
    maxToRenderPerBatch={10}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={Array []}
    stickySectionHeadersEnabled={true}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</SafeAreaView>
`;
